--- a/main.html
+++ b/main.html
@@ -1,7 +1,5 @@
 <html>
 <head>
-  <!-- hello--> 
-  <!--hiiiiiiiiiiii-->
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,7 +15,7 @@
 <nav class="navbar navbar-inverse" id="navbar navbar-inverse" >
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Bara && Hosam </a>
+      <a class="navbar-brand" href="#">Muhammad</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#navbar navbar-inverse">Home</a></li>
